--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,4 +1,3 @@
-
 /*
  * Copyright 2020 Adobe. All rights reserved.
  * This file is licensed to you under the Apache License, Version 2.0 (the "License");
@@ -10,74 +9,65 @@
  * OF ANY KIND, either express or implied. See the License for the specific language
  * governing permissions and limitations under the License.
  */
+
 :root {
+  /* colors */
   --background-color: white;
   --light-color: #f8f8f8;
   --dark-color: #505050;
   --text-color: #131313;
   --link-color: #3b63fb;
   --link-hover-color: #1d3ecf;
-  --body-font-family: "Gotham", "Gotham Fallback", "Arial Adjusted", "Arial", "sans-serif";
-  --heading-font-family: "Gotham", "Gotham Fallback", "Arial Adjusted", "Arial", "sans-serif";
-  --body-font-size-m: 21px;
+
+  /* fonts */
+  --body-font-family: roboto, roboto-fallback, sans-serif;
+  --heading-font-family: roboto-condensed, roboto-condensed-fallback, sans-serif;
+
+  /* body sizes */
+  --body-font-size-m: 22px;
   --body-font-size-s: 19px;
-  --body-font-size-xs: 10.72px;
-  --heading-font-size-xxl: 56px;
-  --heading-font-size-xl: 28px;
-  --heading-font-size-l: 18px;
-  --heading-font-size-m: 21px;
-  --heading-font-size-s: 19px;
-  --heading-font-size-xs: 10.72px;
-  --nav-height: 267px;
+  --body-font-size-xs: 17px;
+
+  /* heading sizes */
+  --heading-font-size-xxl: 55px;
+  --heading-font-size-xl: 44px;
+  --heading-font-size-l: 34px;
+  --heading-font-size-m: 27px;
+  --heading-font-size-s: 24px;
+  --heading-font-size-xs: 22px;
+
+  /* nav height */
+  --nav-height: 64px;
   --header-height: var(--nav-height);
 }
 
 /* fallback fonts */
 @font-face {
-  font-family:"Gotham Fallback";
-  font-style:normal;
-  font-weight:500;
-  src:local("Arial");
-  ascent-override:69.51%;
-  descent-override:17.38%;
-  line-gap-override:17.38%;
-  size-adjust:115.09%;
+  font-family: roboto-condensed-fallback;
+  size-adjust: 88.82%;
+  src: local('Arial');
 }
 
 @font-face {
-  font-family:"Gotham Fallback";
-  font-style:normal;
-  font-weight:300;
-  src:local("Arial");
-  ascent-override:71.09%;
-  descent-override:17.77%;
-  line-gap-override:17.77%;
-  size-adjust:112.53%;
+  font-family: roboto-fallback;
+  size-adjust: 99.529%;
+  src: local('Arial');
 }
 
-@font-face {
-  font-family:"Gotham Fallback";
-  font-style:normal;
-  font-weight:400;
-  src:local("Arial");
-  ascent-override:70.47%;
-  descent-override:17.62%;
-  line-gap-override:17.62%;
-  size-adjust:113.52%;
-}
-
-@media (width>=900px) {
+@media (width >= 900px) {
   :root {
-    --body-font-size-m: 21px;
-    --body-font-size-s: 19px;
-    --body-font-size-xs: 10.72px;
-    --heading-font-size-xxl: 56px;
-    --heading-font-size-xl: 28px;
-    --heading-font-size-l: 18px;
-    --heading-font-size-m: 21px;
-    --heading-font-size-s: 19px;
-    --heading-font-size-xs: 10.72px;
-    --nav-height: 267px;
+    /* body sizes */
+    --body-font-size-m: 18px;
+    --body-font-size-s: 16px;
+    --body-font-size-xs: 14px;
+
+    /* heading sizes */
+    --heading-font-size-xxl: 45px;
+    --heading-font-size-xl: 36px;
+    --heading-font-size-l: 28px;
+    --heading-font-size-m: 22px;
+    --heading-font-size-s: 20px;
+    --heading-font-size-xs: 18px;
   }
 }
 
@@ -99,15 +89,22 @@ header {
   height: var(--nav-height);
 }
 
-header .header, footer .footer {
+header .header,
+footer .footer {
   visibility: hidden;
 }
 
-header .header[data-block-status="loaded"], footer .footer[data-block-status="loaded"] {
+header .header[data-block-status="loaded"],
+footer .footer[data-block-status="loaded"] {
   visibility: visible;
 }
 
-h1, h2, h3, h4, h5, h6 {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
   margin-top: 0.8em;
   margin-bottom: 0.25em;
   font-family: var(--heading-font-family);
@@ -116,36 +113,25 @@ h1, h2, h3, h4, h5, h6 {
   scroll-margin: 40px;
 }
 
-h1 {
-  font-size: var(--heading-font-size-xxl);
-}
+h1 { font-size: var(--heading-font-size-xxl); }
+h2 { font-size: var(--heading-font-size-xl); }
+h3 { font-size: var(--heading-font-size-l); }
+h4 { font-size: var(--heading-font-size-m); }
+h5 { font-size: var(--heading-font-size-s); }
+h6 { font-size: var(--heading-font-size-xs); }
 
-h2 {
-  font-size: var(--heading-font-size-xl);
-}
-
-h3 {
-  font-size: var(--heading-font-size-l);
-}
-
-h4 {
-  font-size: var(--heading-font-size-m);
-}
-
-h5 {
-  font-size: var(--heading-font-size-s);
-}
-
-h6 {
-  font-size: var(--heading-font-size-xs);
-}
-
-p, dl, ol, ul, pre, blockquote {
+p,
+dl,
+ol,
+ul,
+pre,
+blockquote {
   margin-top: 0.8em;
   margin-bottom: 0.25em;
 }
 
-code, pre {
+code,
+pre {
   font-size: var(--body-font-size-s);
 }
 
@@ -157,11 +143,14 @@ pre {
   white-space: pre;
 }
 
-main>div {
+main > div {
   margin: 40px 16px;
 }
 
-input, textarea, select, button {
+input,
+textarea,
+select,
+button {
   font: inherit;
 }
 
@@ -178,7 +167,8 @@ a:hover {
 }
 
 /* buttons */
-a.button:any-link, button {
+a.button:any-link,
+button {
   box-sizing: border-box;
   display: inline-block;
   max-width: 100%;
@@ -200,17 +190,22 @@ a.button:any-link, button {
   white-space: nowrap;
 }
 
-a.button:hover, a.button:focus, button:hover, button:focus {
+a.button:hover,
+a.button:focus,
+button:hover,
+button:focus {
   background-color: var(--link-hover-color);
   cursor: pointer;
 }
 
-button:disabled, button:disabled:hover {
+button:disabled,
+button:disabled:hover {
   background-color: var(--light-color);
   cursor: unset;
 }
 
-a.button.secondary, button.secondary {
+a.button.secondary,
+button.secondary {
   background-color: unset;
   border: 2px solid currentcolor;
   color: var(--text-color);
@@ -234,28 +229,29 @@ main img {
 }
 
 /* sections */
-main>.section {
+main > .section {
   margin: 40px 0;
 }
 
-main>.section>div {
+main > .section > div {
   max-width: 1200px;
   margin: auto;
   padding: 0 24px;
 }
 
-main>.section:first-of-type {
+main > .section:first-of-type {
   margin-top: 0;
 }
 
-@media (width>=900px) {
-  main>.section>div {
+@media (width >= 900px) {
+  main > .section > div {
     padding: 0 32px;
   }
 }
 
 /* section metadata */
-main .section.light, main .section.highlight {
+main .section.light,
+main .section.highlight {
   background-color: var(--light-color);
   margin: 0;
   padding: 40px 0;
@@ -263,24 +259,4 @@ main .section.light, main .section.highlight {
 
 .section.hidden {
   display: none;
-}
-
-.section.section-1 {
-  background: rgb(243 250 251) none no-repeat scroll 0% 0% / auto padding-box border-box;
-}
-
-.section.section-2 {
-  background: rgb(255 255 255) none no-repeat scroll 0% 0% / auto padding-box border-box;
-}
-
-.section.section-3 {
-  background: rgb(0 84 155) none no-repeat scroll 0% 0% / auto padding-box border-box;
-}
-
-.section.section-4 {
-  background: rgb(0 84 155) none repeat scroll 0% 0% / auto padding-box border-box;
-}
-
-.section.section-5 {
-  background: rgb(224 241 243) none no-repeat scroll 0% 0% / auto padding-box border-box;
 }
